--- a/MoneyKeeper/MoneyKeeper/Storyboards/Base.lproj/TabBar.storyboard
+++ b/MoneyKeeper/MoneyKeeper/Storyboards/Base.lproj/TabBar.storyboard
@@ -26,12 +26,23 @@
             </objects>
             <point key="canvasLocation" x="-826" y="445"/>
         </scene>
+        <!--SecondVC-->
+        <scene sceneID="Nzc-nf-OhV">
+            <objects>
+                <viewControllerPlaceholder storyboardName="SecondStoryboard" referencedIdentifier="SecondVC" id="Xix-5i-eJp" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="52l-aX-fLt"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GhE-iX-xaN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-504" y="410"/>
+        </scene>
         <!--Tab Bar View Controller-->
         <scene sceneID="RV4-5t-Xhr">
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="fbo-KM-HVL" customClass="TabBarViewController" customModule="MoneyKeeper" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="u1M-jV-2SL">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -40,6 +51,7 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
+                        <segue destination="Xix-5i-eJp" kind="relationship" relationship="viewControllers" id="dcG-lN-Zbr"/>
                         <segue destination="A1I-JV-MCT" kind="relationship" relationship="viewControllers" id="fij-Lw-2k7"/>
                         <segue destination="JLf-Na-niX" kind="relationship" relationship="viewControllers" id="QbB-Zn-66R"/>
                     </connections>
