--- a/MoneyKeeper/MoneyKeeper/Storyboards/Overview.storyboard
+++ b/MoneyKeeper/MoneyKeeper/Storyboards/Overview.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -132,7 +132,7 @@
                     <connections>
                         <outlet property="balanceAmountOutlet" destination="x7I-V0-8Dv" id="dPt-xR-rTl"/>
                         <outlet property="incomeAmountOutlet" destination="PXL-6f-xdp" id="vjv-gA-a82"/>
-                        <outlet property="overviewTableView" destination="Gx8-b1-IOe" id="Jyf-sC-Uso"/>
+                        <outlet property="overviewTableView" destination="Gx8-b1-IOe" id="m8d-zU-Xn2"/>
                         <outlet property="topInfoViewOutlet" destination="esB-XF-eVB" id="3NE-94-yae"/>
                         <outlet property="withdrawAmountOutlet" destination="l1W-Ld-wgu" id="P3K-Oc-3bV"/>
                         <segue destination="8T5-91-cwi" kind="presentation" identifier="historySegue" id="fym-rC-O8G"/>
