--- a/MoneyKeeper/MoneyKeeper/Storyboards/History.storyboard
+++ b/MoneyKeeper/MoneyKeeper/Storyboards/History.storyboard
@@ -52,9 +52,8 @@
                                     <constraint firstItem="juZ-PG-qds" firstAttribute="centerY" secondItem="fzo-kv-kci" secondAttribute="centerY" id="rua-uF-hux"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="EHr-lS-DWn">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="EHr-lS-DWn">
                                 <rect key="frame" x="0.0" y="134" width="414" height="762"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="historyRow" textLabel="ONh-Wr-Yd4" detailTextLabel="vlE-nK-Xpl" style="IBUITableViewCellStyleValue1" id="oKQ-hb-WMC">
@@ -92,6 +91,10 @@
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="iyI-6u-VvE" secondAttribute="trailing" id="6aN-JG-7rh"/>
                             <constraint firstItem="iyI-6u-VvE" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="9z2-Ma-W8r"/>
+                            <constraint firstItem="EHr-lS-DWn" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" constant="34" id="QJ5-UN-qNH"/>
+                            <constraint firstItem="EHr-lS-DWn" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="ge1-xj-wdK"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="EHr-lS-DWn" secondAttribute="trailing" id="hlX-xt-rFC"/>
+                            <constraint firstItem="EHr-lS-DWn" firstAttribute="top" secondItem="iyI-6u-VvE" secondAttribute="bottom" constant="0.5" id="hwM-Le-rgK"/>
                             <constraint firstItem="iyI-6u-VvE" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="iXB-ZF-dO3"/>
                             <constraint firstItem="iyI-6u-VvE" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="0.1" id="vtj-aQ-p7Z"/>
                         </constraints>
